<resources>
    <!--General names-->
    <string name="app_name" translatable="false">Check Tasks</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="arrow" translatable="false">\u3009</string>
    <string name="set">Set</string>
    <string name="will_be_deleted">will be deleted!</string>
    <string name="it_has">It has</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="deleted_successfully">Deleted Successfully!</string>
    <string name="something_went_wrong">Something Went Wrong!</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="nav_header_description">header of drawer menu. image is the same image of the app. which is decorated text of the app name (Check Task)</string>
    <string name="home_title">Home</string>
    <string name="check_your_tasks">CHECK YOUR TASKS!</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="has">has</string>
    <string name="finished">finished</string>
    <string name="empty">empty</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="sync">Sync</string>
    <string name="import_data">Import data</string>
    <string name="empty_list">Empty List</string>
    <string name="founded">Founded</string>
    <string name="are_you_sure_reset_all_data">Are you sure you want to reset all folders, files and tasks?</string>
    <string name="reset">Reset</string>
    <string name="sync_finish_successfully">Sync finished successfully</string>
    <string name="sync_failed">Sync failed!</string>
    <string name="error_try_relogin">Something Went Wrong! Try re-login</string>
    <string name="import_success">Data retrieved successfully</string>
    <string name="import_failed">Import Failed!</string>
    <string name="login_failed">Login Failed!</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_settings">Settings</string>

    <!--Folder-->
    <string name="folder_title">Folder</string>
    <string name="folders_title">Folders</string>
    <string name="add_folder_dialog_edittext_hint">Name</string>
    <string name="invalid_folder_name">Invalid Folder Name</string>
    <string name="invalid_folder_name_exist">There is a Folder With Same Name</string>
    <string name="add_folder_title">Add Folder</string>
    <string name="edit_folder_title">Edit Folder</string>
    <string name="delete_folder_title">Delete Folder</string>
    <string name="empty_folder_list">Folder List is Empty</string>

    <!--File-->
    <string name="file_title">File</string>
    <string name="file">file</string>
    <string name="files">files</string>
    <!--in arabic will be (ملف) for 11 and more files-->
    <string name="arabic_files">files</string>
    <string name="files_title">Files</string>
    <string name="add_file_dialog_edittext_hint">Name</string>
    <string name="invalid_file_name">Invalid File Name</string>
    <string name="invalid_file_name_exist">There is a File With Same Name</string>
    <string name="add_file_title">Add File</string>
    <string name="edit_file_title">Edit File</string>
    <string name="delete_file_title">Delete File</string>
    <string name="start_reminder_title">Start Reminder At</string>
    <string name="start_reminder_none">None</string>
    <string name="repeat_reminder_every">Repeat Reminder Every</string>
    <string name="reminder_periodic">Repeat</string>
    <string name="custom_days">Days</string>
    <string name="custom">custom</string>
    <string name="invalid_custom_days">Invalid number of days</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="after_tomorrow">after tomorrow</string>
    <string name="after">after</string>
    <string name="days">days</string>
    <!--in arabic will be (يوم) for 11 and more days-->
    <string name="arabic_days">days</string>
    <string name="every">Every</string>
    <string name="all_files">All Files</string>
    <string name="repeat_custom_dialog_title">Custom Repeat</string>
    <string name="notification_title">Tasks Reminder</string>
    <string name="empty_file_list">File List is Empty</string>
    <string name="never">Never</string>
    <string name="every_day">Every day</string>
    <string name="every2_day">Every 2 days</string>
    <string name="every3_day">Every 3 days</string>
    <string name="every_week">Every week</string>
    <string name="every2_week">Every 2 week</string>
    <string name="every_month">Every month</string>
    <string-array name="repeat_every_options">
        <item>@string/never</item>
        <item>@string/every_day</item>
        <item>@string/every2_day</item>
        <item>@string/every3_day</item>
        <item>@string/every_week</item>
        <item>@string/every2_week</item>
        <item>@string/every_month</item>
        <item>@string/custom</item>
    </string-array>

    <!--Task-->
    <string name="task_title">Task</string>
    <string name="tasks">tasks</string>
    <string name="tasks_title">Tasks</string>
    <string name="add_task_dialog_edittext_hint" translatable="false">…</string>
    <string name="add_task_title">Add Task</string>
    <string name="edit_task_title">Edit Task</string>
    <string name="delete_task_title">Delete Task</string>
    <string name="unchecked_tasks">unchecked tasks</string>


    <!--Content Description-->
    <string name="content_description_fab_folder">Add Folder Button</string>
    <string name="content_description_fab_file">Add File Button</string>
    <string name="content_description_fab_task">Add Task Button</string>
    <string name="content_description_file_image">File image</string>
    <string name="content_description_folder_image">Folder image</string>
    <string name="content_description_more_option">More option button to show edit and delete buttons</string>
    <string name="content_description_arrow_icon_nav">arrow image to indicate whether the list is open or close</string>


    <!-- Settings -->
    <string name="sync_header">Sync</string>
    <string name="sync_title">Sync to cloud periodically</string>
    <string name="languages_title">Language</string>
    <string name="app_language">App language</string>
    <string name="system_language">System language</string>
    <string name="sync_successed">Sync successed</string>
    <string name="cloud_same_local">Import successed</string>
    <string name="Theme_title">Theme</string>
    <string name="app_theme">Themes</string>
    <string name="yellow">Yellow</string>
    <string name="gray">Gray</string>
    <string name="teal">Teal</string>
    <string name="Indigo">Indigo</string>
    <string name="brown">Brown</string>
    <string name="red">Red</string>
    <string name="purple">Purple</string>
    <string name="undo">Undo</string>
</resources>