<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="15dp"
    android:elevation="24dp">


    <EditText
        android:id="@+id/fileNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:autofillHints="name"
        android:hint="@string/add_file_dialog_edittext_hint"
        android:inputType="text" />


    <RelativeLayout
        android:id="@+id/startReminderLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/fileNameEditText"
        android:layout_marginHorizontal="8dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:id="@+id/startReminderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="4dp"
            android:text="@string/start_reminder_title"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/text_middle_size" />

        <TextView
            android:id="@+id/startReminderContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="24dp"
            android:text="@string/start_reminder_none"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/text_middle_size"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/startReminderArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="-9dp"
            android:text="@string/arrow"
            android:textColor="?android:textColorTertiary"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/repeatEveryLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/startReminderLayout"
        android:layout_marginHorizontal="8dp">

        <TextView
            android:id="@+id/repeatEveryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="4dp"
            android:text="@string/reminder_periodic"
            android:textSize="@dimen/text_middle_size"
            android:textColor="?android:textColorSecondary"
            tools:ignore="RelativeOverlap" />

        <Spinner
            android:id="@+id/repeatEverySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:entries="@array/repeat_every_options"
            android:spinnerMode="dropdown"
            android:textSize="@dimen/text_middle_size" />
    </RelativeLayout>


</RelativeLayout>
